--- a/spring-boot-crud/src/main/resources/templates/search.html
+++ b/spring-boot-crud/src/main/resources/templates/search.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 <h1>Recherche de CV</h1>
@@ -13,9 +14,13 @@
 <h2>Fichiers téléchargés :</h2>
 <ul>
     <li th:each="candidate : ${candidates}" class="candidate">
+        <p th:text="${candidate.firstName + ' ' + candidate.lastName}"></p>
         <ul>
             <li th:each="file : ${candidate.fileName}">
-                <a th:href="@{/candidates/download/{file}(file=${file})}" th:text="${file}"></a>
+                <a th:href="@{/candidates/download/{file}(file=${file})}" download>
+                    <i class="fa fa-download"></i>
+                    <span th:text="${file}"></span>
+                </a>
             </li>
         </ul>
     </li>
