--- a/spring-boot-crud/src/main/resources/templates/CandidateForm.html
+++ b/spring-boot-crud/src/main/resources/templates/CandidateForm.html
@@ -1,23 +1,58 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <title>Create candidate</title>
+    <meta charset="UTF-8">
+    <title>Create Candidate</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .file-input-wrapper {
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Create candidate:</h1>
-    <form action="/candidates" th:object="${candidate}" method="post" enctype="multipart/form-data">
-        <label>First Name: <input type="text" th:field="*{firstName}"/></label><br/>
-        <label>Last Name: <input type="text" th:field="*{lastName}"/></label><br/>
-        <label>File:<input type="file" name="file" multiple="multiple"/></label>
-        <input type="submit" value="Submit"/>
+<div class="container mt-5">
+    <h1>Create Candidate</h1>
+    <form action="/candidates" th:object="${candidate}" method="post" enctype="multipart/form-data" id="candidate-form">
+        <div class="form-group">
+            <label >First Name:</label>
+            <input type="text" class="form-control" th:field="*{firstName}" required/>
+        </div>
+        <div class="form-group">
+            <label >Last Name:</label>
+            <input type="text" class="form-control" th:field="*{lastName}" required/>
+        </div>
+        <div class="form-group">
+            <label>Files:</label>
+            <div id="file-input-container">
+                <div class="file-input-wrapper">
+                    <input type="file" name="files" class="form-control-file"/>
+                </div>
+            </div>
+            <button type="button" class="btn btn-secondary" id="add-file-button">Add Another File</button>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-    <script th:inline="javascript">
-        document.addEventListener('DOMContentLoaded', function() {
-            document.querySelector('form').addEventListener('submit', function() {
-                window.location.href = '/chercher';
-            });
+</div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const fileInputContainer = document.getElementById('file-input-container');
+        const addFileButton = document.getElementById('add-file-button');
+
+        addFileButton.addEventListener('click', function() {
+            const fileInputWrapper = document.createElement('div');
+            fileInputWrapper.className = 'file-input-wrapper';
+            fileInputWrapper.innerHTML = '<input type="file" name="files" class="form-control-file"/>';
+            fileInputContainer.appendChild(fileInputWrapper);
         });
 
-    </script>
+        document.getElementById('candidate-form').addEventListener('submit', function(event) {
+            event.preventDefault();
+            this.submit();
+        });
+    });
+</script>
 </body>
 </html>
