--- a/spring-boot-crud/src/main/resources/templates/search.html
+++ b/spring-boot-crud/src/main/resources/templates/search.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        .candidate {
+            margin-bottom: 20px;
+        }
+
+        .candidate ul {
+            list-style: none;
+            padding: 0;
+            margin-top: 5px;
+        }
+
+        .candidate ul li {
+            margin-bottom: 5px;
+        }
+    </style>
 </head>
 <body>
 <h1>Recherche de CV</h1>
@@ -16,7 +31,7 @@
     <li th:each="candidate : ${candidates}" class="candidate">
         <p th:text="${candidate.firstName + ' ' + candidate.lastName}"></p>
         <ul>
-            <li th:each="file : ${candidate.fileName}">
+            <li th:each="file : ${candidate.fileNameList}">
                 <a th:href="@{/candidates/download/{file}(file=${file})}" download>
                     <i class="fa fa-download"></i>
                     <span th:text="${file}"></span>
