--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>CV Search</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
+        /* Custom CSS styles */
         .candidate {
             margin-bottom: 20px;
         }
@@ -21,24 +23,38 @@
     </style>
 </head>
 <body>
-<h1>Recherche de CV</h1>
-<form action="#" method="post" th:action="@{/chercher}">
-    <input type="text" name="keyword" placeholder="Entrez un mot-clé" required>
-    <button type="submit">Rechercher</button>
-</form>
-<h2>Fichiers téléchargés :</h2>
-<ul>
-    <li th:each="candidate : ${candidates}" class="candidate">
-        <p th:text="${candidate.firstName + ' ' + candidate.lastName}"></p>
-        <ul>
-            <li th:each="file : ${candidate.fileNameList}">
-                <a th:href="@{/candidates/download/{file}(file=${file})}" download>
-                    <i class="fa fa-download"></i>
-                    <span th:text="${file}"></span>
-                </a>
-            </li>
-        </ul>
-    </li>
-</ul>
+<div class="container mt-5">
+    <h1 class="mb-4">Candidate Search</h1>
+    <form th:action="@{/chercher}" method="get" class="mb-4">
+        <div class="input-group">
+            <input type="text" name="keyword" class="form-control" placeholder="Enter a keyword" required>
+            <div class="input-group-append">
+                <button type="submit" class="btn btn-primary">Search</button>
+            </div>
+        </div>
+    </form>
+
+    <h2 class="mb-3">Results:</h2>
+    <ul class="list-group">
+        <li th:each="candidate : ${candidates}" class="list-group-item candidate">
+            <div>
+                <h5 class="mb-0" th:text="${candidate.firstName + ' ' + candidate.lastName}"></h5>
+                <ul class="list-unstyled mt-2">
+                    <li th:each="fileName : ${candidate.fileNameList}">
+                        <a th:href="@{/candidates/download/{fileName}(fileName=${fileName})}" download class="d-flex align-items-center">
+                            <i class="fas fa-download mr-2"></i>
+                            <span th:text="${fileName}"></span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </li>
+    </ul>
+</div>
+
+<!-- Bootstrap JS scripts -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
