--- a/src/main/resources/templates/CandidateForm.html
+++ b/src/main/resources/templates/CandidateForm.html
@@ -62,13 +62,13 @@
     <i class="fas fa-bars"></i>
 </div>
 <div class="sidebar" id="sidebar">
-    <a href="login.html">Login</a>
-    <a href="candidateform.html">Candidate Form</a>
-    <a href="search.html">Search</a>
-    <a href="#" class="logout">
-        <i class="fas fa-sign-out-alt"></i> Logout
-    </a>
+    <br>
+    <a href="login.html"><i class="fas fa-sign-in-alt"></i> Login</a>
+    <a href="CandidateForm.html"><i class="fas fa-user-plus"></i> Candidate Form</a>
+    <a href="search.html"><i class="fas fa-search"></i> Search</a>
 </div>
+
+<br>
 <div class="content" id="content">
     <div class="container mt-5">
         <h1>Create Candidate</h1>
@@ -89,7 +89,7 @@
                 <label>Files:</label>
                 <div id="file-input-container">
                     <div class="file-input-wrapper">
-                        <input type="file" name="files" class="form-control-file" />
+                        <input type="file" name="files" class="form-control-file" id="fileInput" />
                     </div>
                     <br>
                 </div>
@@ -151,10 +151,11 @@
             const firstName = document.getElementById('firstName').value;
             const lastName = document.getElementById('lastName').value;
             const email = document.getElementById('email').value;
+            const fileName = document.getElementById('fileInput').value.split(/(\\|\/)/g).pop(); // Extracting only the file name
 
             const tableBody = document.getElementById('candidates-table-body');
             const newRow = document.createElement('tr');
-            newRow.innerHTML = '<td>' + firstName + '</td>' + '<td>' + lastName + '</td>' + '<td>' + email + '</td>' + '<td>' + 'File Name' + '</td>';
+            newRow.innerHTML = '<td>' + firstName + '</td>' + '<td>' + lastName + '</td>' + '<td>' + email + '</td>' + '<td>' + fileName + '</td>';
             tableBody.appendChild(newRow);
         }
     });
